--- a/application/templates/api.hr_maf.html
+++ b/application/templates/api.hr_maf.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block upload_role %}
-<input type='hidden' name='role' value='hr'>
+'role': 'hr'},
 {% endblock %}
 
 {% block hr-comment %}
