--- a/application/templates/api.readonly_maf.html
+++ b/application/templates/api.readonly_maf.html
@@ -4,6 +4,10 @@
 <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
 <script type="text/javascript" src="/static/locking_form.js"></script>
 <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
+<script type="text/javascript" src="/static/development-bundle/ui/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="/static/jQuery-File-Upload/jquery.iframe-transport.js"></script>
+<script type="text/javascript" src="/static/jQuery-File-Upload/jquery.fileupload.js"></script>
+<script type="text/javascript" src="/static/jQuery-File-Upload/jquery.fileupload-ui.js"></script>
 <script type="text/javascript">
 
     var form_key = '{{form.key}}';
