--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,7 +2,7 @@
 
 <!-- links and scripts -->
 {% block css %}
-<link rel="stylesheet" type="text/css" href="/static/index.css">
+<!--<link rel="stylesheet" type="text/css" href="/static/index.css">-->
 {% endblock %}
 
 {% block content %}
