--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -1,15 +1,10 @@
 {% extends "_api_base.html" %}
 
-{% block breadcrumps %}
-<!--todo compose css -->
-<span class="breadcrump breadcrump_current">Home</span>
-{% endblock %}
-
 {% block content %}
 <!-- show current PR link (if open) -->
 <!-- if departments or projects -->
 {% if departments %}
-<h1><a href="#/manager/get/department/all">Current PR</a></h1>
+<h1><a href="#/manager/get/department/all">Current Performance Reviews</a></h1>
 <ul class="pr_current">
     {% for department in departments %}
     <li><a href="#/manager/get/department/{{department.name}}">Department:&nbsp;{{department.name}}</a></li>
