--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -65,7 +65,7 @@
                         {% endfor %}
                     </select></p>
 
-    <div class="sl"><a href="#/hr/settings" class="settings">Settings</a> | <a href="/logout" class="logout">Logout</a></div>
+    <div class="sl"><a href="#" style="display: none" class="settings">Settings</a>&nbsp;&#124;&nbsp;<a href="/logout" class="logout">Logout</a></div>
   </div>
 
     {% endblock %}
