--- a/application/static/style/main.css
+++ b/application/static/style/main.css
@@ -70,12 +70,21 @@ background: url(img/header.png) no-repeat top;
   line-height: 15px;
 }
 
-.content {background: #fff; position:relative; z-index:3; padding: 41px 48px 48px 53px;}
+.content {background: #fff; position:relative; z-index:3; padding: 35px 48px 48px 53px;}
 
 h1 {
-  font-size: 38px;
+  font-size: 39px;
   font-weight: normal;
-  margin: 0 0 36px 0;
+  margin: 0 0 40px 0;
   padding: 0;
   color: #0b545b;
+}
+
+.info {
+  color: #9fd4d2;
+  line-height: 24px;
+}
+
+.info b {
+  font-size: 120%;
 }
