--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -12,7 +12,8 @@
     <script type="text/javascript" src="/static/set_form_status.js"></script>
     <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
-    <link type="text/css" href="/static/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/static/style/jquery-ui-1.8.17.custom.css" rel="stylesheet" />
+    <!--<link type="text/css" href="/static/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />-->
     <!-- links and scripts -->
     {% block css %}
     {% endblock %}
