--- a/application/templates/api.readonly_maf.html
+++ b/application/templates/api.readonly_maf.html
@@ -13,7 +13,8 @@
     var form_key = '{{form.key}}';
     
     $(function() {
-            $( "#accordion" ).accordion();
+            $( "#accordion" ).accordion({ header: "h3", collapsible: true,
+                                    active: false,autoHeight: false });
         });
 $(function () {
     $('#dropzone').fileupload({
@@ -48,19 +49,16 @@ $(function () {
 
 {% endblock %}
 
-{% block breadcrumps %}
-<a href="/#/manager/home">Home</a>&nbsp;&gt;&nbsp;
-<a href="/#/manager/get/all">PR</a>&nbsp;&gt;&nbsp;
-<a href="/#/manager/get/{{form.pr.employee.dept.name}}">{{form.pr.employee.dept.name}}</a>&nbsp;&gt;&nbsp;
-<span class="breadcrump breadcrump_current">{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</span>
-{% endblock %}
-
 {% block content %}
-<div id="info">
-<p>Performance Review Form for {{form.pr.employee.first_name}} {{form.pr.employee.last_name}}</p>
-<p>date: {{form.pr.date}}</p>
+<div class="info">
+  <p>Employee: <b>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}</b><br />
+  Time period: <b>{{form.pr.period.description}}</b>
+  </div>
+<!--<div id="info">-->
+<!--<p>Performance Review Form for {{form.pr.employee.first_name}} {{form.pr.employee.last_name}}</p>-->
+<!--<p>date: {{form.pr.date}}</p>-->
 <p id="lock_info"></p>
-</div>
+<!--</div>-->
 {% if not prev_form %}
 <div style="height: 50px; width: 100px; background-color: #add8e6;" id="dropzone" >Drop file here</div>
 
